--- a/Capstone/Views/Ticket/List.cshtml
+++ b/Capstone/Views/Ticket/List.cshtml
@@ -15,7 +15,7 @@
                     {
                  
                     <div class="col-12 col-md-6 col-xl-4 my-3 d-flex justify-content-center">
-                        <div class="card-flip">
+                    <div class="card-flip" id="ticket-@ticket.TicketId">
                             <div class="card-flip-inner">
                                 <!-- Front of the card -->
                                 <div class="card-flip-front">
@@ -43,6 +43,13 @@
                                         <p class="text-info mt-2">Da attivare</p>
 
                                     }
+                                    <form method="post" id="deleteForm-@ticket.TicketId">
+                                        @Html.AntiForgeryToken()
+
+                                    <button type="submit" class="btn-danger myBtnCart mt-2 position-relative" style="top:30px;" id="delete-button-@ticket.TicketId">
+                                        <i class="bi bi-trash3-fill"></i>
+                                        </button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -62,3 +69,4 @@
         <img src="/images/Logos.png" class="img-fluid" />
     </div>
 </div>
+<script src="/js/ticket.js"></script>
