Aggiornamento menu di navigazione e stili CSS
Sono state rimosse le righe di codice commentate che contenevano la vecchia struttura del menu di navigazione nel file `_Layout.cshtml`.

È stato aggiunto un nuovo menu di navigazione con classi e stili aggiornati, visibile sia su dispositivi mobili che desktop.

È stata aggiunta una condizione per mostrare il link "Admin" solo agli utenti con ruolo "admin" o "master".

È stato aggiunto uno stile CSS `.min-heigth` per impostare un'altezza minima calcolata in base all'altezza della finestra.

È stato aggiunto uno stile CSS per l'elemento `input.inputBar:-webkit-autofill` per gestire il riempimento automatico dei campi di input, impostando il colore di sfondo e del testo.

È stato aggiunto uno stile CSS `.bg` per impostare uno sfondo con colore semi-trasparente, bordi arrotondati e padding.

--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -52,6 +52,10 @@ body {
 
 }
 
+.min-heigth{
+    min-height: calc(100vh - 74px);
+}
+
 #bg{
 
     background-image:url(/images/wallpaperflare.com_wallpaper.jpg);
@@ -463,6 +467,13 @@ body {
         background-color: #0303038b !important;
     }
 
+    input.inputBar:-webkit-autofill {
+        background-color: black !important;
+        -webkit-box-shadow: 0 0 0 1000px black inset !important;
+        color: white !important;
+        -webkit-text-fill-color: white !important;
+    }
+
 .myBtnCart {
     font-family: 'Montserrat', sans-serif !important;
     border-radius: 2em;
@@ -496,3 +507,8 @@ body {
     background-color: #393939c9;
 }
 
+.bg {
+    background-color: #5757573f;
+    border-radius: 30px;
+    padding: 2em;
+}
