--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -16,64 +16,6 @@
 </head>
 <body>
     <header>
-        @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
-            <div class="container-fluid bg-dark">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/images/Logo-2.png" alt="logo" width="140"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-
-                    <div class="d-flex justify-content-between ">
-                        @if(!User.Identity.IsAuthenticated)
-                        {
-                            <ul class="navbar-nav ">
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Auth" asp-action="Login">Accedi</a>
-                                </li>
-                            </ul>
-                        }
-                        else
-                        {
-                            <ul class="navbar-nav ">
-                            
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Master" asp-action="MasterDashboard">MASTER</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Event" asp-action="List">EVENTI</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Dj" asp-action="List">DJ</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Location" asp-action="List">Locations</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Genre" asp-action="List">Genres (music)</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Profile">Utente</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Cart" asp-action="Cart">Carrello</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Ticket" asp-action="List">I miei biglietti</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Admin" asp-action="Dashboard">Admin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bolder text-danger" asp-area="" asp-controller="Auth" asp-action="Logout">Esci</a>
-                                </li>
-                            </ul>
-                        }
-                    </div>
-                </div>
-            </div>
-        </nav> *@
         <nav class="navbar navbar-expand-md navbar-dark py-1 " id="navbar">
             <div class="container-fluid">
                 <!-- Logo visibile solo su mobile (d-md-none) -->
@@ -152,7 +94,19 @@
                                                     Profilo
                                                 </a>
                                             </li>
-
+                                            @if(User.IsInRole("admin") || User.IsInRole("master"))
+                                            {
+                                                <li class="nav-item m-0 ms-md-2">
+                                                    <a asp-action="Dashboard" asp-controller="Admin" class="nav-link d-none d-md-block fs-4 ">
+                                                        <i class="bi bi-wrench-adjustable-circle"></i>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a asp-action="Dashboard" asp-controller="Admin" class="nav-link d-block d-md-none myTitle ">
+                                                        Admin
+                                                    </a>
+                                                </li>
+                                            }
                                         }
                                         else
                                         {   <li>
