--- a/Capstone/Views/Event/Details.cshtml
+++ b/Capstone/Views/Event/Details.cshtml
@@ -91,7 +91,14 @@
                                     </i>
                                 </p>
                                 <div class="my-3" id="ticket">
-                                    <h3>Acquista tickets</h3>
+                                @if (isEventOver)
+                                {
+                                   <h3>Evento concluso</h3>
+                                }
+                                else
+                                {
+                                    
+                                <h3>Acquista tickets</h3>
                                     <p class="fs-4 mb-2">@totalTickets <i class="bi bi-ticket-perforated-fill ms-1"></i> </p>
                                     <form asp-action="AddToCart" asp-controller="Cart" method="post">
                                         <input type="hidden" name="eventId" value="@Model.EventId" />
@@ -122,6 +129,7 @@
                                         </div>
                                         <button type="submit" class="myBtnCart bg-danger text-center mt-2">Aggiungi al carrello</button>
                                     </form>
+                                }
                                 </div>
                                 <div class="col-12">
                                     <hr />
