--- a/Capstone/wwwroot/css/dj_details.css
+++ b/Capstone/wwwroot/css/dj_details.css
@@ -53,3 +53,30 @@
     overflow-x: auto;
     scroll-behavior: smooth;
 }
+
+
+#bgEvent {
+    background-image: var(--bg-image)!important; /* Utilizza la variabile */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    position: relative;
+}
+
+    #bgEvent::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        backdrop-filter: blur(40px);
+        z-index: 1;
+    }
+
+.bgOverlay {
+    position: relative;
+    z-index: 2;
+    color: white;
+}
