--- a/Capstone/wwwroot/css/site.css
+++ b/Capstone/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 html {
     font-size: 18px !important;
@@ -48,8 +49,9 @@ html {
 }
 
 body {
-    font-family: 'Oswald', sans-serif!important;
-
+    /*    font-family: 'Oswald', sans-serif !important;*/
+/*    font-family: 'Montserrat', sans-serif !important;
+*/    font-family: "Outfit", sans-serif;
 }
 
 .min-heigth{
@@ -511,4 +513,13 @@ body {
     background-color: #5757573f;
     border-radius: 30px;
     padding: 2em;
+}
+
+#cartItemsCount {
+    top: -24px;
+    left: 47px;
+    font-size: 0.5em;
+    background-color: red;
+    padding: 0px 10px;
+    border-radius: 10px;
 }
